; ModuleID = '/home/carl/AnghaBench/tmux/extr_input.c_input_save_state.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_input.c_input_save_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_ctx = type { i32, i32, i32, i32, i32, %struct.screen_write_ctx }
%struct.screen_write_ctx = type { %struct.screen* }
%struct.screen = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.input_ctx*)* @input_save_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @input_save_state(%struct.input_ctx* %0) #0 {
  %2 = alloca %struct.input_ctx*, align 8
  %3 = alloca %struct.screen_write_ctx*, align 8
  %4 = alloca %struct.screen*, align 8
  store %struct.input_ctx* %0, %struct.input_ctx** %2, align 8
  %5 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %6 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %5, i32 0, i32 5
  store %struct.screen_write_ctx* %6, %struct.screen_write_ctx** %3, align 8
  %7 = load %struct.screen_write_ctx*, %struct.screen_write_ctx** %3, align 8
  %8 = getelementptr inbounds %struct.screen_write_ctx, %struct.screen_write_ctx* %7, i32 0, i32 0
  %9 = load %struct.screen*, %struct.screen** %8, align 8
  store %struct.screen* %9, %struct.screen** %4, align 8
  %10 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %11 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %10, i32 0, i32 4
  %12 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %13 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %12, i32 0, i32 3
  %14 = call i32 @memcpy(i32* %11, i32* %13, i32 4)
  %15 = load %struct.screen*, %struct.screen** %4, align 8
  %16 = getelementptr inbounds %struct.screen, %struct.screen* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %19 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %18, i32 0, i32 2
  store i32 %17, i32* %19, align 8
  %20 = load %struct.screen*, %struct.screen** %4, align 8
  %21 = getelementptr inbounds %struct.screen, %struct.screen* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %24 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %23, i32 0, i32 1
  store i32 %22, i32* %24, align 4
  %25 = load %struct.screen*, %struct.screen** %4, align 8
  %26 = getelementptr inbounds %struct.screen, %struct.screen* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %29 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %28, i32 0, i32 0
  store i32 %27, i32* %29, align 8
  ret void
}

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
